<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint">FB</string>
    <string name="input_prefill"></string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="fab_add_stock">Add new stock</string>
    <string name="recycler_stock_list">Stock list</string>
    <string name="text_view_stock_symbol">Stock symbol</string>
    <string name="text_view_bid_price">Bid price</string>
    <string name="text_view_change">Change</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_detail">Detail</string>
    <string name="symbol_not_added">Ops! Symbol not found. Please try again.</string>
    <string name="no_internet_connection">No internet connection. Your quotes might be out of date.</string>
    <string name="not_enough_data">Not enough data to render you a chart.</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="stock_is_saved">This stock is already saved!</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_label">StockHawk</string>
    <string name="widget_empty_list">Add quotes to keep yourself up to date.</string>
</resources>
