<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/stock_symbol"
        style="@style/StockSymbolTextStyleWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:contentDescription="@string/text_view_stock_symbol"
        tools:text="GOOG" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end">

        <TextView
            android:id="@+id/bid_price"
            style="@style/BidPriceTextStyleWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10sp"
            android:paddingEnd="10sp"
            android:contentDescription="@string/text_view_bid_price"
            tools:text="1000.00" />

        <TextView
            android:id="@+id/change"
            style="@style/PercentChangeTextStyleWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:paddingRight="3dp"
            android:paddingEnd="3dp"
            android:contentDescription="@string/text_view_change"
            tools:text="100%" />
    </LinearLayout>
</LinearLayout>