<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_text_view_no_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/material_red_700"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/recycler_stock_list" />

    </LinearLayout>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_add_stock"
        android:src="@drawable/ic_add_white_24dp"
        fab:fab_colorNormal="@color/material_blue_500"
        fab:fab_colorPressed="@color/material_blue_600"
        fab:fab_colorRipple="@color/ripple"
        fab:fab_shadow="true"
        fab:fab_type="normal"
        fab:layout_anchor="recycler_view"
        fab:layout_anchorGravity="bottom|end" />
</FrameLayout>
